minor move and capture algo improvement